Avatar: preventing `alt` attribute overflow

--- a/src/widgets/avatar/avatar.scss
+++ b/src/widgets/avatar/avatar.scss
@@ -17,6 +17,7 @@
   transition: opacity $avatar-animation-duration;
   border-radius: $avatar-border-radius;
   display: block;
+  overflow: hidden; // Preventing `alt` attribute overflow
 
   /* IMAGE */
 
